<resources>
    <string name="app_name">My Application</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="loginname">login name</string>
    <string name="passwd">password</string>
    <string name="swit">What does this do?</string>
    <string name="radio">RadioButton</string>
    <string name="check">CheckBox</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="startChat">Start Chat</string>
    <string name="send">Send</string>
    <string name="weather">WeatherForecast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
