<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radio"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/radio"/>

    <CheckBox
        android:text="@string/check"
        android:id="@+id/checkBox"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />

    <Switch
        android:id="@+id/sw"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/swit"/>

    <ImageButton
        android:id="@+id/image"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:src="@android:drawable/ic_menu_camera"/>


</GridLayout>